<resources>
    <string name="app_name">WordsFactory</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="learn_anytime_and_anywhere">Learn anytime\nand anywhere</string>
    <string name="textIntro">Quarantine is the perfect time to spend your day learning something new from anywhere!</string>
    <string name="nextInto">Next</string>
    <string name="titleIntro">Find a course\nfor you</string>
    <string name="skip">Skip</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <string name="paragraph">The practice or skill of preparing food by\ncombining, mixing, and heating ingredients.\n\n<font color="#65AAEA">Example:</font> he developed an interest in cooking.</string>
    <string name="title_activity_onboarding">Onboarding</string>
    <!-- Strings used for fragments for navigation -->
    <string name="title_onboarding_1">Learn anytime\nand anywhere</string>
    <string name="title_onboarding_2">Find a course\nfor you</string>
    <string name="title_onboarding_3">Improve your skills</string>
    <string name="description_onboarding_1">Quarantine is the perfect time to spend your day learning something new from anywhere!</string>
</resources>