<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".onboarding.screens.FirstScreen">


    <Button
        android:id="@+id/buttonIntro1"
        android:layout_width="311dp"
        android:layout_height="56dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="50dp"
        android:backgroundTint="#E3562A"
        android:fontFamily="@font/rubik"
        android:text="@string/nextInto"
        android:textAllCaps="false"
        app:cornerRadius="10dp"
        app:iconPadding="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageInto1"
        android:layout_width="375dp"
        android:layout_height="264dp"
        android:layout_marginTop="188dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/kids_first_screen"/>

    <TextView
        android:id="@+id/titleInto1"
        android:layout_width="341dp"
        android:layout_height="72dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:breakStrategy="balanced"
        android:fontFamily="@font/rubik"
        android:gravity="center_horizontal|center_vertical"
        android:letterSpacing="-0.02"
        android:lineSpacingExtra="4sp"
        android:text="@string/learn_anytime_and_anywhere"
        android:textAlignment="center"
        android:textColor="#3C3A36"
        android:textFontWeight="700"
        android:textSize="24sp"
        android:translationY="1.78sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageInto1" />

    <TextView
        android:id="@+id/textInto1"
        android:layout_width="341dp"
        android:layout_height="64dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/rubik"
        android:gravity="center_horizontal|center_vertical"
        android:lineSpacingExtra="4sp"
        android:text="@string/textIntro"
        android:textColor="#78746D"
        android:textFontWeight="700"
        android:textSize="14sp"
        android:translationY="-2.21sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleInto1" />

    <TextView
        android:id="@+id/skipIntro1"
        android:layout_width="30dp"
        android:layout_height="16dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/rubik"
        android:gravity="right|top"
        android:lineSpacingExtra="-1sp"
        android:text="@string/skip"
        android:textColor="#78746D"
        android:textFontWeight="700"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>